PharmaDemo/src/objects/Order_Template_SKU__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Template__c</fullName>
        <label>Order Template</label>
        <referenceTo>Order_Template__c</referenceTo>
        <relationshipLabel>Order Template SKUs</relationshipLabel>
        <relationshipName>Order_Template_SKUs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <referenceTo>SKU__c</referenceTo>
        <relationshipName>Order_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <label>Order Template SKU</label>
    <nameField>
        <displayFormat>AT-SKU-{0000}</displayFormat>
        <label>Order Template SKU</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Template SKUs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>